Fix: add spacing in heroe name

--- a/root/css/style.css
+++ b/root/css/style.css
@@ -96,8 +96,9 @@ header {
 }
 .card__body h3 {
   font-size: 30px;
-  text-transform: uppercase;
   font-weight: 400;
+  text-transform: uppercase;
+  margin-bottom: 10px;
 }
 .card__body p {
   color: #333;
